# hackathon-google-230806

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
solar/: main.py  models.py
solar/geometry/: constants.py  models.py  router.py  service.py  util.py
