[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "solar"
version = "0.1.0"
description = ""
authors = ["Itzik <itzik1058@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "solar" }]

[tool.poetry.scripts]
solar = "solar.main:run"

[tool.poetry.dependencies]
python = "^3.11"
osmnx = "^1.6.0"
fastapi = "^0.101.0"
uvicorn = { extras = ["standard"], version = "^0.23.2" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
ruff = "^0.0.282"
mypy = "^1.4.1"
ipykernel = "^6.25.0"

[tool.mypy]
ignore_missing_imports = true

disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false

implicit_optional = false
strict_optional = false

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

pretty = true
